# intelligent-research-hub

./: .gitgnore  Dockerfile  Dockerfile.dev  README.md  conftest.py  db.sqlite3  docker-compose.yaml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
domain/: services.py  tasks.py
domain/tests/: test_services.py  test_tasks.py
intelliresearchhub/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
interface_layer/: apps.py  models.py  serializer.py  views.py
interface_layer/migrations/: 0001_initial.py
interface_layer/tests/: test_models.py  test_views.py
nginx/: nginx.conf
secrets/: db_password.txt  django_secret_key.txt  google_credentials.txt  redis_password.txt
templates/: dashboard.html
templates/registration/: login.html  register.html
