[project]
name = "intelligent-research-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.2",
    "django>=6.0.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "flower>=2.0.1",
    "google-adk>=1.24.1",
    "google-cloud-aiplatform>=1.136.0",
    "google-genai>=1.62.0",
    "gunicorn>=25.0.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
]
